samples/_failures_safe/1761005605_ce3553_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69a7a72c.c: In function ‘main’:
./samples/SAFE/__tmp_69a7a72c.c:155:12: error: missing terminating " character
  155 |     printf("Analysis completed in %.
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_69a7a72c.c:155:5: error: expected expression at end of input
  155 |     printf("Analysis completed in %.
      |     ^~~~~~
./samples/SAFE/__tmp_69a7a72c.c:155:5: error: expected declaration or statement at end of input
